# pixie

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  app.py  main.py  paths.py  requirements.txt  simple.py  videotest.py
arduino/pixie_face/: pixie_face.ino
brain/: CLAUDE.md
client/: client.js
code/testcode/: eyetest.py  servotest.py  videotest.py
orchestrator/: listen.py  pixie.onnx  pixie_verifier.pkl  requirements.txt
orchestrator/voice_refs/: rachel.flac
orchestrator/wakeword_training/: record_negative.py  record_positives.py  train.py  train_verifier.py
scripts/: smoke_frontend.sh  smoke_gateway.sh
server/: package-lock.json  server.js
src/: gateway.rs  lib.rs  main.rs  web.rs
templates/: index.html
web/: app.js  index.html  styles.css
