[package]
name = "pixie"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["fs"] }
